[~] {@20110} Fix credit-card fields sizes and positions on mobile devices.

--- a/css/styles.less
+++ b/css/styles.less
@@ -1267,3 +1267,20 @@ html[dir="rtl"] {
 }
 
 /*====  End of Dropdown vertical  ====*/
+
+.credit-card .form-inline {
+
+    @media (max-width: 873px) {
+        .control-label {
+            width: 100%;
+        }
+    }
+
+    .form-group {
+        display: inline-block;
+
+        .form-control {
+            width: auto;
+        }
+    }
+}
